--- a/Onam.html
+++ b/Onam.html
@@ -1,5 +1,11 @@
+<!DOCTYPE html>
 <html>
 <head>
-<title>"onam festival"<\title>
-<\head>
-<\html>
+    <title>My Simple Webpage</title>
+</head>
+<body>
+    <h1>Welcome to My Webpage</h1>
+    <p>This is a simple webpage created with HTML.</p>
+</body>
+</html>
+
